@@ -45,11 +45,11 @@ public class UserServiceImpl implements UserService {
             role = checkRoleExist();
         }
 
-        user.setRoles(Arrays.asList(role));
+        user.setRoles(List.of(role));
     }
 
     @Override
-    public User findByEmail(String email) {
+    public User findUserByEmail(String email) {
         return userRepository.findByEmail(email);
     }
 
